--- a/TcpProxy/TcpProxy/TcpProxy.csproj
+++ b/TcpProxy/TcpProxy/TcpProxy.csproj
@@ -49,7 +49,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>TcpProxy.TcpProxy</StartupObject>
+    <StartupObject>TcpProxy.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -64,7 +64,7 @@
     <Compile Include="BufferPool.cs" />
     <Compile Include="Redirector.cs" />
     <Compile Include="Session.cs" />
-    <Compile Include="TcpProxy.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
